<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".FragmentMoviesList">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_16dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_16dp"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/aimImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_56dp"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_combined_shape" />

    <TextView
        android:id="@+id/listTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:text="@string/movie_list_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/aimImage"
        app:layout_constraintStart_toEndOf="@id/aimImage"
        app:layout_constraintTop_toTopOf="@id/aimImage" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movieItem"
        android:layout_width="170dp"
        android:layout_height="296dp"
        android:layout_marginTop="102dp"
        android:background="@drawable/background_item"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_8dp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_8dp"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2dp"
            android:layout_marginTop="@dimen/margin_2dp"
            android:layout_marginEnd="@dimen/margin_2dp"
            android:layout_marginBottom="48dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_movie_poster" />

        <TextView
            android:id="@+id/age"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/background_age"
            android:gravity="center"
            android:text="13+"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_12sp"
            android:fontFamily="@font/roboto_normal"
            android:layout_marginTop="@dimen/margin_8dp"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="16dp"
            android:layout_height="14dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@id/age"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/age"
            app:srcCompat="@drawable/ic_favorite" />

        <TextView
            android:id="@+id/tvMovieGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4dp"
            android:layout_marginBottom="@dimen/margin_4dp"
            android:text="@string/movie_genre"
            android:textColor="@color/movie_rating_color"
            android:textSize="@dimen/text_8sp"
            app:layout_constraintBottom_toTopOf="@id/llRating"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintStart_toStartOf="@id/guideline3" />

        <LinearLayout
            android:id="@+id/llRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/backgroundImage"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline3">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_8dp"
                android:src="@drawable/ic_star_enable" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_8dp"
                android:src="@drawable/ic_star_enable" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_8dp"
                android:src="@drawable/ic_star_enable" />

            <ImageView
                android:id="@+id/image4"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_8dp"
                android:src="@drawable/ic_star_enable" />

            <ImageView
                android:id="@+id/image5"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_8dp"
                android:src="@drawable/ic_star_disable" />

            <TextView
                android:id="@+id/tvCountReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_6dp"
                android:gravity="center"
                android:text="@string/count_rewies_text"
                android:textColor="@color/review_color"
                android:textSize="@dimen/text_8sp" />

            <TextView
                android:id="@+id/tvReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_4dp"
                android:text="@string/reviews_text"
                android:textAllCaps="true"
                android:textColor="@color/review_color"
                android:textSize="@dimen/text_8sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/movieName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/item_movie_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/backgroundImage" />

        <TextView
            android:id="@+id/tvDurationMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_duration_text"
            android:textAllCaps="true"
            android:textColor="@color/duration_text_color"
            android:textSize="@dimen/text_8sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/movieName" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>